--- a/src/component/MovieItem/movieItem.module.css
+++ b/src/component/MovieItem/movieItem.module.css
@@ -2,7 +2,9 @@
     display: flex;
     align-items: center;
     border-bottom: 1px solid #ccc;
-    padding: 20px 0px
+    padding: 20px 0px;
+    cursor: pointer;
+
   }
   
   .movieItemImage {
