--- a/src/component/WatchedMovieItem/watchedMovieItem.module.css
+++ b/src/component/WatchedMovieItem/watchedMovieItem.module.css
@@ -10,7 +10,8 @@
     display: flex;
     align-items: center;
     border-bottom: 1px solid #ccc;
-    padding: 20px 0px
+    padding: 20px 0px;
+    cursor: pointer;
 
   }
   
