--- a/src/component/Main/main.module.css
+++ b/src/component/Main/main.module.css
@@ -3,7 +3,7 @@
   ;
       gap: 2rem;
       padding: 2rem;
-      background-color: #f0f2f5;
+      background-color: #2C2C2C;
       min-height: 100vh;
       justify-content: center;
   }
