--- a/src/component/MovieList/movieList.module.css
+++ b/src/component/MovieList/movieList.module.css
@@ -1,6 +1,9 @@
 
 .movieList {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: grid
+;
+  gap: 5px;
   }
