--- a/src/component/MovieSection/movieSection.module.css
+++ b/src/component/MovieSection/movieSection.module.css
@@ -1,6 +1,6 @@
 .container {
     padding: 1rem;
-    background-color: #f0f2f5;
+    background-color:#2C2C2C;
     min-height: 800px;
     box-sizing: border-box;
     width: 500px;
