--- a/src/component/WatchMovieStatic/WatchMovieStatic.module.css
+++ b/src/component/WatchMovieStatic/WatchMovieStatic.module.css
@@ -8,7 +8,7 @@
     margin-right: 15px;
     font-size: 1.2rem;
     font-weight: bold;
-    color: #333;
+    color: #ffffff;
 }
 .movieItemInfo{
     display: flex
